force-app/main/default/objects/CIF_Input_Main__c/CIF_Input_Main__c.object-meta.xml
<CustomObject>
    <label>CIF Input Main</label>
    <nameField>
        <label>CIF Input Main Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CIF Input Main</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>