force-app/main/default/objects/CIF_Input_Main__c/fields/customer_type__c.field-meta.xml
<CustomField>
    <fullName>customer_type__c</fullName>
    <label>customer_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>