force-app/main/default/objects/CIF_Input_Main__c/fields/emergency_name__c.field-meta.xml
<CustomField>
    <fullName>emergency_name__c</fullName>
    <label>emergency_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>