force-app/main/default/objects/CIF_Input_Main__c/fields/emergency_number__c.field-meta.xml
<CustomField>
    <fullName>emergency_number__c</fullName>
    <label>emergency_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>