force-app/main/default/objects/CIF_Input_Main__c/fields/emergency_relation__c.field-meta.xml
<CustomField>
    <fullName>emergency_relation__c</fullName>
    <label>emergency_relation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>