force-app/main/default/objects/CIF_Input_Main__c/fields/home_location__c.field-meta.xml
<CustomField>
    <fullName>home_location__c</fullName>
    <label>home_location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>