force-app/main/default/objects/CIF_Input_Main__c/fields/home_status_id__c.field-meta.xml
<CustomField>
    <fullName>home_status_id__c</fullName>
    <label>home_status_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>