force-app/main/default/objects/CIF_Input_Main__c/fields/nationality__c.field-meta.xml
<CustomField>
    <fullName>nationality__c</fullName>
    <label>nationality</label>
    <length>255</length>
    <type>Text</type>
</CustomField>