force-app/main/default/objects/CIF_Input_Main__c/fields/npwp_type__c.field-meta.xml
<CustomField>
    <fullName>npwp_type__c</fullName>
    <label>npwp_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>