force-app/main/default/objects/CIF_Input_Main__c/fields/num_dependent__c.field-meta.xml
<CustomField>
    <fullName>num_dependent__c</fullName>
    <label>num_dependent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>