force-app/main/default/objects/CIF_Input_Main__c/fields/occupation_id__c.field-meta.xml
<CustomField>
    <fullName>occupation_id__c</fullName>
    <label>occupation_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>