force-app/main/default/objects/CIF_Input_Main__c/fields/other_income__c.field-meta.xml
<CustomField>
    <fullName>other_income__c</fullName>
    <label>other_income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>