force-app/main/default/objects/CIF_Input_Main__c/fields/religion_id__c.field-meta.xml
<CustomField>
    <fullName>religion_id__c</fullName>
    <label>religion_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>