force-app/main/default/objects/CIF_Input_Main__c/fields/spouse_birth_date__c.field-meta.xml
<CustomField>
    <fullName>spouse_birth_date__c</fullName>
    <label>spouse_birth_date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>