force-app/main/default/objects/CIF_Input_Main__c/fields/spouse_id_number__c.field-meta.xml
<CustomField>
    <fullName>spouse_id_number__c</fullName>
    <label>spouse_id_number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>