force-app/main/default/objects/CIF_Input_Main__c/fields/spouse_legal_name__c.field-meta.xml
<CustomField>
    <fullName>spouse_legal_name__c</fullName>
    <label>spouse_legal_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>