force-app/main/default/objects/CIF_Input_Main__c/fields/spouse_mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>spouse_mobile_phone__c</fullName>
    <label>spouse_mobile_phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>