force-app/main/default/objects/CIF_Input_Main__c/fields/spouse_occupation__c.field-meta.xml
<CustomField>
    <fullName>spouse_occupation__c</fullName>
    <label>spouse_occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>