force-app/main/default/objects/CIF_Input_Main__c/fields/stay_since_year__c.field-meta.xml
<CustomField>
    <fullName>stay_since_year__c</fullName>
    <label>stay_since_year</label>
    <length>255</length>
    <type>Text</type>
</CustomField>